Fix dynamic checkout button spacing

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -110,7 +110,7 @@ body {
 }
 
 .productSide h2 {
-  color: white;
+  color: black;
   padding: 20px;
 }
 
@@ -599,8 +599,9 @@ footer {
   cursor: pointer;
   text-decoration: none;
   font-size: xx-large;
-  width: 20%;
   text-align: right;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .CheckoutButton:hover {
